--- a/mainStyles.css
+++ b/mainStyles.css
@@ -4,9 +4,11 @@
     padding: 0;
     font-family: 'Kumbh Sans', sans-serif;
 }
+body{
+    background: #030238;
+}
 /* Navigaion bar */
 .navbar {
-    background: #030238;
     height: 6rem;
     display: flex;
     justify-content: center;
@@ -14,6 +16,9 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    background: rgba(255,255,255, 0.2);
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
+    border-radius: 4px;
 }
 
 .navbar__container {
@@ -25,10 +30,7 @@
     max-width: 81.25rem;
     margin: 0 auto;
     padding: 0 3rem;
-    background: rgba(255,255,255, 0.2);
     backdrop-filter: blur(16px), brightness(125%);
-    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, 0.8);
-    border-radius: 4px;
 }
 
 #navbar__logo{
@@ -106,7 +108,14 @@
 
 /* main home */
 .main {
-    background-color: #01052e;
+    /* background-color: #01052e; */
+    background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0, 17, 63, 0.6) 100%), url(Images/logo-2023.png);
+    background-size: cover;
+    background-position: center;
+    color: #ffffff;
+    background-attachment: fixed;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .main__container{
@@ -116,7 +125,7 @@
     justify-content: center;
     margin: 0 auto;
     height: 90vh;
-    background-color: #01052e;
+    /* background-color: #01052e; */
     z-index: 1;
     width: 100%;
     max-width: 1300px;
