--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -7,7 +7,7 @@
 body{
     background: #030238;
 }
-/* Navigaion bar */
+/*======================================================================= Navigaion bar ===========================================================================*/
 .navbar {
     height: 5rem;
     display: flex;
@@ -112,16 +112,18 @@ body{
     transition: all 0.3s ease;
 }
 
-/* main home */
+/*======================================================================= main home ===========================================================================*/
 .main {
-    /* background-color: #01052e; */
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.6) 0%, rgba(0, 17, 63, 0.6) 100%), url(/Images/logo-2023.png);
     background-size: cover;
     background-position: center;
     color: #ffffff;
     background-attachment: fixed;
-    padding-top: 50px;
+   /* padding-top: 50px;
     padding-bottom: 50px;
+     display: flex;
+    justify-content: center;
+    flex-direction: row; */
 }
 
 .main__container{
@@ -130,12 +132,12 @@ body{
     align-items: center;
     justify-content: center;
     margin: 0 auto;
+    margin-left: 15rem;
     height: 90vh;
-    /* background-color: #01052e; */
     z-index: 1;
     width: 100%;
     max-width: 1300px;
-    padding: 0 50px;
+    /* padding-right: 30rem; */
 }
 
 .main__content h1{
@@ -210,20 +212,18 @@ body{
 
 .main__img--container{
     text-align: center;
+    left: 600px;
 }
 
-.main_img{
-    height: 80%;
-    width: 80%;
-}
 
-/* services */
+
+/*======================================================================= services ===========================================================================*/
 .services{
     background: #01052e;
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
 }
 
 .common__heder{
@@ -248,12 +248,14 @@ body{
 .services__card{
     margin: 1rem;
     height: 525px;
-    width: 400px;
+    width: 25vw;
     border-radius: 4px;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url(/Images/b2.jpg);
-    background-size: cover;
+    background-size: calc(100%);
     position: relative;
+    background-repeat: no-repeat;
     color: #ffffff;
+    border-radius: 10px;
 }
 .services__card:nth-child(2){
     background-image: linear-gradient(to bottom, rgba(0,0,0,0) 0%, rgba(17,17,17,0.6) 100%), url(/Images/b1.jpg);
@@ -261,14 +263,14 @@ body{
 
 .services h2{
     position: absolute;
-    top: 350px;
-    left: 30px;
+    top: 34vh;
+    left: 2vw;
 }
 
 .services__card p{
     position: absolute;
-    top: 400px;
-    left: 30px;
+    top: 39vh;
+    left: 2vw;
 }
 
 .services__card button{
@@ -281,8 +283,8 @@ body{
     border-radius: 4px;
     background: #f77068;
     position: absolute;
-    top: 440px;
-    left: 30px;
+    top: 45vh;
+    left: 5vw;
     font-size: 1rem;
     cursor: pointer;
 }
@@ -293,10 +295,9 @@ body{
     cursor: pointer;
 }
 
-/* time count */
+/*======================================================================= time count ===========================================================================*/
 .time__count{
-    margin-top: 1vh;
-    width: 100%;
+    margin-top: 25vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -305,13 +306,12 @@ body{
 
 .countdown{
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     text-align: center;
-    width: 50vw;
-    margin-top: -2vh;
+    gap: 3rem;
+    margin-top: 10rem;
     background-image: linear-gradient(to left, #ff77b7 0%, #5900ff 100%);
     background-size: 100%;
-    margin-bottom: 5rem;
     -webkit-background-clip: text;
     -moz-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -325,9 +325,206 @@ body{
     font-size: 2rem;
 }
 
+/*======================================================================= Registation ===========================================================================*/
+.registation{
+    background-image: linear-gradient(to bottom, rgba(0, 7, 27, 0.8) 0%, rgba(54, 57, 66, 0.6) 100%), url(/Images/uni.png);
+    backdrop-filter: blur(3px);
+    backdrop-filter: blur(10px);
+    background-size: cover;
+    background-position: center;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+}
+
+.registation__container{
+    position: relative;
+    min-width: 80vw;
+    min-height: 80vh;
+    display: flex;
+    z-index: 1000;
+}
+
+.registation__container .registation__contactinfo{
+    position: absolute;
+    top: 4vh;
+    width: 20vw;
+    height: calc(100% - 80px);
+    background: #01413A;
+    z-index: 1;
+    padding: 2rem;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    justify-items: center;
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.15);
+}
 
 
-/* responsive */
+.registation__container .registation__contactinfo h2{
+    color: #ffffff;
+    font-size: 2.5rem;
+    font-weight: 500;
+}
+
+.registation__container .registation__contactinfo ul.info{
+    position: relative;
+    margin: 20px 0;
+}
+
+.registation__container .registation__contactinfo ul.info li{
+    position: relative;
+    list-style: none;
+    display: flex;
+    margin: 20px 0;
+    cursor: pointer;
+    align-items: flex-start;
+}
+
+.registation__container .registation__contactinfo ul.info li span:nth-child(1){
+    width: 5vw;
+    min-width: 5vw;
+}
+
+.registation__container .registation__contactinfo ul.info li span:nth-child(1) svg{
+    max-width: 100%;
+    filter: invert(1);
+}
+
+.registation__container .registation__contactinfo ul.info li span:nth-child(2){
+    color: #ffffff;
+    margin-left: 10px;
+    margin-top: 2rem;
+}
+
+.registation__container .refistation__form{
+    position: absolute;
+    padding: 70px 50px;
+    padding-left: 250px;
+    margin-left: 150px;
+    width: calc(100% - 150px);
+    height: 100%;
+    background: rgba(0, 7, 27, 0.7);
+    box-shadow: 0 20px 25px rgba(0, 0, 0, 0.25);
+}
+
+.registation__container .refistation__form h2{
+    top: -10rem;
+    color: #d0f0f0;
+    font-size: 3rem;
+    font-weight: 500;
+    text-align: center;
+}
+
+.registation__container .refistation__form .form{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    justify-items: center;
+    flex-direction: column;
+    margin-top: 4vh;
+    margin-left: 5vw;
+}
+
+.registation__container .refistation__form .form .input__set-1{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex-direction: column;
+}
+
+
+
+.registation__container .refistation__form .form .input{
+    position: relative;
+    width: 30% ;
+}
+.registation__container .refistation__form .form .input__set-1{
+    font-size: 2rem;
+}
+
+.registation__container .refistation__form .form .input input{
+    color: #d0f0f0;
+    resize: none;
+    margin: 0.5rem 0 0.5rem 0;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    border-radius: 10px;
+    padding: 0.8rem;
+}
+
+.registation__container .refistation__form .form .input__set-1 input{
+    font-size: 1.2rem;
+    width: 30vw;
+    height: 2.3rem;
+}
+
+.registation__container .refistation__form .form .input__set-2{
+    font-size: 1.8rem;
+    height: 2.3rem;
+    display: flex;
+    flex-direction: row;
+    margin-top: 2rem;
+}
+
+.registation__container .refistation__form .form .input__set-2 .item{
+    font-size: 1.2rem;
+    width: 25vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    gap: 2rem;
+}
+
+.registation__container .refistation__form .form .input__set-2 .input.phone{
+    margin-left: 15vw;
+}
+
+.registation__container .refistation__form .form .input__set-2 .input.phone input{
+    font-size: 1rem;
+    width: 20vw;
+    height: 2.3rem;
+}
+
+.registation__container .refistation__form .form .input.btn input{
+    font-size: 1.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 1rem 1.8rem;
+    margin-top: 10vh;
+    height: 90%;
+    width: 90%;
+    border: none;
+    outline: none;
+    border-radius: 0.25rem;
+    color: #ffffff;
+    background: linear-gradient(to top, #ff0844 0%, #f8684f 100%);
+}
+
+.registation__container .refistation__form .form .input.btn input::after{
+    position: absolute;
+    content: '';
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background: #4837ff;
+    transition: all 0.35s;
+    border-radius: 4px;
+
+}
+
+.registation__container .refistation__form .form .input.btn input:hover{
+    background: #c637ff;
+}
+
+
+/*======================================================================= responsive ===========================================================================*/
 @media screen and (max-width: 960px){
     /* navigation */
     .navbar__container{
