--- a/css/commitee.css
+++ b/css/commitee.css
@@ -1,4 +1,4 @@
-body.commitee{
+body.commitee__all{
     min-height: 100vh;
     background-image: linear-gradient(to bottom, rgba(0,0,0,0.62) 0%, rgba(0, 17, 63, 0.62) 100%), url(/Images/logo-2023.png);
     background-size: cover;
