--- a/css/mainStyles.css
+++ b/css/mainStyles.css
@@ -223,7 +223,7 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 80vh;
+    height: 100vh;
 }
 
 .common__heder{
@@ -336,13 +336,13 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 110vh;
 }
 
 .registation__container{
     position: relative;
-    min-width: 80vw;
-    min-height: 80vh;
+    min-width: 90vw;
+    min-height: 90vh;
     display: flex;
     z-index: 1000;
 }
@@ -371,6 +371,7 @@ body{
 
 .registation__container .registation__contactinfo ul.info{
     position: relative;
+    bottom: 20%;
     margin: 20px 0;
 }
 
@@ -479,6 +480,27 @@ body{
     gap: 2rem;
 }
 
+.registation__container .refistation__form .form .input__set-2 .input select{
+    width: 12vw;
+    height: 4vh;
+    font-size: 1rem;
+    padding: 0.5rem;
+    color: #ffffff;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.4);
+}
+
+.registation__container .refistation__form .form .input__set-2 .input option{
+    color: #ffffff;
+    background-color: #030238;
+}
+
+.registation__container .refistation__form .form .input__set-2 .input option:checked{
+    color: #ffffff;
+    background-color: #030238;
+
+}
+
 .registation__container .refistation__form .form .input__set-2 .input.phone{
     margin-left: 15vw;
 }
@@ -490,17 +512,15 @@ body{
 }
 
 .registation__container .refistation__form .form .input.btn input{
-    font-size: 1.6rem;
+    font-size: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
     padding: 1rem 1.8rem;
     margin-top: 10vh;
-    height: 90%;
-    width: 90%;
-    border: none;
-    outline: none;
+    height: 40%;
+    width: 40%;
     border-radius: 0.25rem;
     color: #ffffff;
     background: linear-gradient(to top, #ff0844 0%, #f8684f 100%);
@@ -522,6 +542,136 @@ body{
 .registation__container .refistation__form .form .input.btn input:hover{
     background: #c637ff;
 }
+
+/*======================================================================= Footer ===========================================================================*/
+footer{
+    width: 100%;
+    height: 40vh;
+}
+
+.footer__container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: #ffffff;
+}
+
+.footer__container .footer__content{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-direction: row;
+    width: 60%;
+}
+
+.footer__container .footer__content .footer__logo .logo__openday{
+    margin-left: -3rem;
+}
+
+
+.footer__container .footer__content .footer__logo .logo__openday img{
+    width: 8.5vw;
+    height: 12.75vh;
+}
+
+.footer__container .footer__content .footer__logo .logo__ieee{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer__container .footer__content h3{
+    color: #fff6c3;
+    font-size: 28px;
+    text-align: left;
+}
+
+.footer__container .footer__content .footer__logo .logo__ieee h3{
+    margin-top: -1rem;
+    margin-bottom: 0.5rem;
+}
+
+.footer__container .footer__content .footer__logo .logo__ieee img{
+    width: 15vw;
+    height: inherit;
+    filter: brightness(0) invert(1);
+    margin-bottom: 1rem;
+}
+
+.footer__container .footer__content .footer__logo .logo__ieee p{
+    color: #fff6c3;
+    font-weight: 50;
+}
+
+.footer__container .footer__content .footer__contact{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+}
+
+.footer__container .footer__content .footer__contact h3{
+    margin-top: 4rem;
+}
+
+.footer__container .footer__content .footer__contact .mobile{
+    margin: 2rem 0 2rem 0;
+}
+
+.footer__container .footer__content .footer__contact .mobile i{
+    font-size: 48px;
+}
+
+
+.footer__container .footer__content .footer__contact .mobile .number{
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    gap: 1rem;
+    margin-top: -6rem;
+    margin-left: 5rem;
+    margin-bottom: 2rem;
+    font-weight: bold;
+}
+
+.footer__container .footer__content .footer__contact .mobile .number small{
+    font-weight: lighter;
+    padding-left: 0.8rem;
+    padding-top: 3rem;
+}
+
+.mail {
+    display: flex;
+    justify-content: first baseline;
+    align-items: center;
+}
+
+.mail span{
+   padding-left: 2rem;
+}
+
+.footer__credit{
+    padding: 2rem;
+    margin: 2rem;
+    width: 100%;
+}
+
+.footer__credit hr{
+    border: 1px solid #b12a5b /* linear-gradient(#c637ff, #01052e) */;
+}
+
+.footer__credit p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2rem;
+}
+
+
+
 
 
 /*======================================================================= responsive ===========================================================================*/
